--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -847,6 +847,10 @@ config MSM_SUSPEND_STATS_FIRST_BUCKET
 endif # MSM_IDLE_STATS
 endif # MSM_PM
 
+config STATE_NOTIFIER
+    bool "State Notifier"
+	default y
+
 source "drivers/soc/qcom/memshare/Kconfig"
 source "drivers/soc/qcom/hab/Kconfig"
 source "drivers/soc/qcom/rmnet_ctl/Kconfig"
