fs: Add support for high performance booster in filesystem
Signed-off-by: EndCredits <endcredits@crepuscular-aosp.icu>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -316,4 +316,7 @@ config FILE_TABLE_DEBUG
 	help
 	  This option enables debug of the open files using a global filetable
 
+config FS_HPB
+	bool "Support HPB on Filesystem"
+	default n
 endmenu
