net: ipv4: implement BBR2 congestion avoidance algorithm [UPDATED]
patch taken from OpenWRT for 5.4 kernel

--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -678,7 +678,7 @@ config TCP_CONG_BBR
 
 config TCP_CONG_BBR2
 	tristate "BBR2 TCP"
-	default n
+	default y
 	---help---
 
 	BBR2 TCP congestion control is a model-based congestion control
