--- a/arch/arm64/boot/dts/qcom/trinket-vidc.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-vidc.dtsi
@@ -54,7 +54,7 @@
 			label = "venus-ddr";
 			qcom,bus-master = <MSM_BUS_MASTER_VIDEO_P0>;
 			qcom,bus-slave = <MSM_BUS_SLAVE_EBI_CH0>;
-			qcom,bus-governor = "vidc-ar50-ddr";
+			qcom,bus-governor = "performance";
 			qcom,bus-range-kbps = <1000 2128000>;
 		};
 
