--- a/arch/arm64/boot/dts/qcom/qcs405-thermal.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs405-thermal.dtsi
@@ -53,7 +53,7 @@
 	aoss-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&tsens0 0>;
 		trips {
 			active-config0 {
@@ -67,7 +67,7 @@
 	q6-hvx-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&tsens0 1>;
 		trips {
 			active-config0 {
@@ -81,7 +81,7 @@
 	lpass-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&tsens0 2>;
 		trips {
 			active-config0 {
@@ -95,7 +95,7 @@
 	wlan-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&tsens0 3>;
 		trips {
 			active-config0 {
@@ -110,7 +110,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 4>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -124,7 +124,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 5>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -138,7 +138,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 6>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -152,7 +152,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 7>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -166,7 +166,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 8>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -180,7 +180,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&tsens0 9>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		trips {
 			active-config0 {
 				temperature = <125000>;
@@ -397,21 +397,21 @@
 	xo-therm-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pms405_adc_tm_iio ADC_XO_THERM_PU2>;
 	};
 
 	pa-therm1-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pms405_adc_tm_iio ADC_AMUX_THM1_PU2>;
 	};
 
 	pa-therm3-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pms405_adc_tm_iio ADC_AMUX_THM3_PU2>;
 	};
 };
