--- a/arch/arm64/boot/dts/qcom/sa6155-pmic.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa6155-pmic.dtsi
@@ -284,7 +284,7 @@
 	xo-therm-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm6155_adc_tm ADC_XO_THERM_PU2>;
 		trips {
 			active-config0 {
@@ -298,7 +298,7 @@
 	pa-therm1-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm6155_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -312,7 +312,7 @@
 	pa-therm2-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm6155_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
