--- a/arch/arm64/boot/dts/qcom/sm6150-interposer-trinket-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150-interposer-trinket-idp.dtsi
@@ -55,7 +55,7 @@
 	rf-pa1-therm-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm6125_adc_tm ADC_GPIO4_PU2>;
 		trips {
 			active-config0 {
