--- a/arch/arm64/boot/dts/qcom/sm8150-sdx50m.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-sdx50m.dtsi
@@ -432,7 +432,7 @@
 	modem0-pa0-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 0>;
 		wake-capable-sensor;
 		trips {
@@ -447,7 +447,7 @@
 	modem0-pa1-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 1>;
 		wake-capable-sensor;
 		trips {
@@ -462,7 +462,7 @@
 	modem1-pa0-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 100>;
 		wake-capable-sensor;
 		trips {
@@ -477,7 +477,7 @@
 	modem1-pa1-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 101>;
 		wake-capable-sensor;
 		trips {
@@ -492,7 +492,7 @@
 	modem1-qfe-wtr-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 104>;
 		wake-capable-sensor;
 		trips {
@@ -507,7 +507,7 @@
 	modem1-modem-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 105>;
 		wake-capable-sensor;
 		trips {
@@ -522,7 +522,7 @@
 	modem1-mmw0-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 106>;
 		wake-capable-sensor;
 		trips {
@@ -537,7 +537,7 @@
 	modem1-mmw1-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 107>;
 		wake-capable-sensor;
 		trips {
@@ -552,7 +552,7 @@
 	modem1-mmw2-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 108>;
 		wake-capable-sensor;
 		trips {
@@ -567,7 +567,7 @@
 	modem1-mmw3-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 109>;
 		wake-capable-sensor;
 		trips {
@@ -582,7 +582,7 @@
 	modem1-skin-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 110>;
 		wake-capable-sensor;
 		trips {
@@ -597,7 +597,7 @@
 	modem1-pa-mdm-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 111>;
 		wake-capable-sensor;
 		trips {
@@ -612,7 +612,7 @@
 	modem1-pa-wtr-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 112>;
 		wake-capable-sensor;
 		trips {
@@ -627,7 +627,7 @@
 	modem1-pa2-usr {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&qmi_sensor 102>;
 		wake-capable-sensor;
 		trips {
