--- a/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
@@ -40,7 +40,7 @@
 
 	gpubw: qcom,gpubw {
 		compatible = "qcom,devbw";
-		governor = "bw_vbif";
+		governor = "performance";
 		qcom,src-dst-ports = <26 512>;
 		operating-points-v2 = <&gpu_bw_tbl>;
 	};
