Revert "net: ipv4: implement BBR2 congestion avoidance algorithm [UPDATED]"
This reverts commit 221932bb1d3b5e1389ac9cda3f60cd782312ed88.

--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -678,7 +678,7 @@ config TCP_CONG_BBR
 
 config TCP_CONG_BBR2
 	tristate "BBR2 TCP"
-	default y
+	default n
 	---help---
 
 	BBR2 TCP congestion control is a model-based congestion control
