--- a/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
@@ -63,8 +63,9 @@
 		qcom,chipid = <0x06010000>;
 
 		qcom,initial-pwrlevel = <6>;
-		qcom,idle-timeout = <64>;
-
+		//qcom,idle-timeout = <64>;
+		qcom,throttle-pwrlevel = <1>;
+		
 		qcom,ubwc-mode = <1>;
 		qcom,min-access-length = <64>;
 		qcom,highest-bank-bit = <14>;
