--- a/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-gpu.dtsi
@@ -64,8 +64,8 @@
 
 		qcom,initial-pwrlevel = <6>;
 		//qcom,idle-timeout = <64>;
-		qcom,throttle-pwrlevel = <1>;
-		
+		//qcom,throttle-pwrlevel = <0>;
+
 		qcom,ubwc-mode = <1>;
 		qcom,min-access-length = <64>;
 		qcom,highest-bank-bit = <14>;
@@ -102,18 +102,18 @@
 		qcom,msm-bus,num-cases = <12>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,msm-bus,vectors-KBps =
-			<26 512 0 0>,          // 0 bus=0
-			<26 512 0 795000>,     // 1 bus=200
-			<26 512 0 1195000>,    // 2 bus=300
-			<26 512 0 1799000>,    // 3 bus=451
-			<26 512 0 2183000>,    // 4 bus=547
-			<26 512 0 2719000>,    // 5 bus=681
-			<26 512 0 3067000>,    // 6 bus=768
-			<26 512 0 4063000>,    // 7 bus=1017
-			<26 512 0 5407000>,    // 8 bus=1353
-			<26 512 0 6215000>,    // 9 bus=1555
-			<26 512 0 7211000>,    // 10 bus=1804
-			<26 512 0 8532000>;    // 11 bus=2133
+			<26 512 0 0>,
+			<26 512 0 800000>,    /*  1 bus=100  (LOW SVS) */
+			<26 512 0 1600000>,   /*  2 bus=200  (LOW SVS) */
+			<26 512 0 2400000>,   /*  3 bus=300  (LOW SVS) */
+			<26 512 0 3608000>,   /*  4 bus=451  (LOW SVS) */
+			<26 512 0 5448000>,   /*  5 bus=547  (LOW SVS) */
+			<26 512 0 8136000>,   /*  6 bus=681  (SVS)     */
+			<26 512 0 10824000>,   /*  7 bus=768  (SVS)     */
+			<26 512 0 12440000>,   /*  8 bus=1017 (SVS_L1)  */
+			<26 512 0 14432000>,  /*  9 bus=1353 (NOM)     */
+			<26 512 0 17064000>,  /* 10 bus=2133 (TURBO_L1)     */
+			<26 512 0 21888000>;  /* 11 bus=2736 (TURBO_L2)   */
 
 		/* GDSC regulator names */
 		regulator-names = "vddcx", "vdd";
@@ -176,7 +176,7 @@
 
 			compatible = "qcom,gpu-pwrlevels";
 
-			/* TURBO_L1 */
+			/* TURBO_L2 */
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
 				qcom,gpu-freq = <1100000000>;
@@ -185,7 +185,7 @@
 				qcom,bus-max = <11>;
 			};
 
-			/* TURBO */
+			/* TURBO_L1 */
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
 				qcom,gpu-freq = <900000000>;
